<resources>
    <string name="app_name">foodnotes</string>
    <string name="displayName">Food Notes</string>
    <string name="takeNoteButton">Let\'s start taking notes</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>

    <string name="home_title">Notes</string>
    <string name="test_notes">You created N food notes</string>
    <string name="search_bar">Find notes</string>
    <string name="bookmark_title">Bookmarks</string>

    <string name="new_note_title">Create a new note</string>
    <string name="new_note_heading">A title for your note</string>
    <string name="new_note_summary">A short description for your note</string>
    <string name="new_note_rating">Rating</string>
    <string name="new_note_minutes">Minutes</string>
    <string name="new_note_category">Category</string>

    <string name="detail_summary">Summary</string>
    <string name="detail_description">Description</string>

    <string name="deletion_msg">Do you want to delete this note?</string>
</resources>