<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewNoteActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="1000dp"
    android:adjustViewBounds="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/new_note_title"
            app:titleTextColor="@color/colorWhite"
            app:titleMarginStart="20dp"
            app:logo="@drawable/new_note_icon"
            app:menu="@menu/nav_new_note"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <RelativeLayout
            android:id="@+id/field_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@color/colorBrightBlue">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heading_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:backgroundTint="@color/colorBlack"
                    android:hint="@string/new_note_heading" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/summary_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                android:layout_below="@id/heading_tf">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"
                    android:maxLines="4"
                    android:maxLength="150"
                    android:backgroundTint="@color/colorBlack"
                    android:hint="@string/new_note_summary" />
            </com.google.android.material.textfield.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/summary_tf">
                <TableRow
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:text="@string/new_note_rating"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="3dip" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/RatingBar"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:padding="3dip"/>
                </TableRow>

                <TableRow
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:text="@string/new_note_minutes"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="3dip" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/minutes_tf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="42dp"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/colorBlack"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:maxLength="4"
                            android:backgroundTint="@color/colorBlack" />
                    </com.google.android.material.textfield.TextInputLayout>
                </TableRow>

                <TableRow
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:text="@string/new_note_category"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:padding="3dip"
                        android:gravity="center_vertical"/>

                    <GridLayout
                        android:id="@+id/radioGroup"
                        android:checkedButton="@+id/radio_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:columnCount="2">
                            <RadioButton
                                android:id="@+id/radio_breakfast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="Breakfast"/>
                            <RadioButton
                                android:id="@+id/radio_lunch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="Lunch"/>
                            <RadioButton
                                android:id="@+id/radio_snack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="Snack"/>
                            <RadioButton
                                android:id="@+id/radio_dinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="Dinner"/>
                    </GridLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/note_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="300dp"
            android:scaleType="centerCrop"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/field_holder"/>

        <ImageButton
            android:id="@+id/note_img_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_below="@id/field_holder"
            app:elevation="8dp"
            android:src="@drawable/ic_delete"
            android:scaleType="centerCrop"
            android:background="@null"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_tf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/note_img">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:gravity="top"
                android:background="@null"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>